--- a/journal/0000.template
+++ b/journal/0000.template
@@ -1,6 +1,8 @@
 ## title goes here
 YYYY-MM-DD
 
+Put a one-liner abstract here that describes the articles' content. Used for the atom feed.
+
 Content starts here.
 
 !!!!!!!! BEGIN REMOVE THIS BEFORE PUSHING !!!!!!!!
