prepared for new section on textbased user-interfaces

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 conf/
 pages/journal.tmpl
+pages/tui.tmpl
 pages/journal/2*.tmpl
+pages/tui/2*.tmpl
 partials/journal-entries.partial
 static/atom.xml
 static/*.gmi
 static/journal/*.gmi
+static/tui/*.gmi
 test/
