streamlined header section, especially for the journal

--- a/journal/0000.template
+++ b/journal/0000.template
@@ -24,10 +24,8 @@ m-dash             : —
 * sets apart a unique idea, an inserted thought.
 
 lastly, the quotes:
-* left double quote  : “
-* right double quote : ”
-* left single quote  : ‘
-* right single quote : ’
+* double quotes  : “”
+* single quotes  : ‘’
 
 !!!!!!!! END REMOVE THIS BEFORE PUSHING !!!!!!!!
 
